fix header-css, header-content was truncated if too long

--- a/css/framework.css
+++ b/css/framework.css
@@ -112,9 +112,8 @@ header{
 
 
 header h1{
-    padding: 15px;
     text-align: center;
-    margin: 0 30%;
+    flex: 1;
     padding: .7em 0;
     text-overflow: ellipsis;
     overflow: hidden;
